--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SAAA Public Portal</title>
+  <title>San Andreas Aviation Administration</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
@@ -613,11 +613,126 @@ const API_KEY = "AIzaSyCTscbYmfCZ_KINIp_Z6QmHQ7J3SUQOGhk"; // <-- Replace with y
     document.addEventListener("DOMContentLoaded", () => {
       loadAirportStatus();
       loadCards("noticeArea", "A3:B3");
-      loadCards("TrainingArea", "D3:E3");
       loadCards("noticeArea2", "A3:B");
-      loadCards("TrainingArea2", "D3:E");
     });
   </script>
+
+
+<script>
+async function loadTrainingPosts2() {
+const SHEET_ID556 = "1tvBwOzrrljerW-lp1Suv9uPCutAuax67q3Ed-GWalnY";
+const SHEET_NAME556 = "Notices"; // Change if your tab name is different
+const API_KEY556 = "AIzaSyCTscbYmfCZ_KINIp_Z6QmHQ7J3SUQOGhk"; // <-- Replace with your real API key
+  const RANGE556 = "D3:E3";                                     // Title = D, Info = E
+
+  const url = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID556}/values/${SHEET_NAME556}!${RANGE556}?key=${API_KEY556}`;
+  const container = document.getElementById("TrainingArea2");
+
+  try {
+    const res = await fetch(url);
+    const data = await res.json();
+    const rows = data.values;
+
+    if (!rows || rows.length === 0) {
+      container.innerHTML = "<p>No training sessions available.</p>";
+      return;
+    }
+
+    container.innerHTML = ""; // Clear container
+
+    rows.forEach(([title, info]) => {
+      // Parse info --> "Instructor: X, Time: Y, Max: Z"
+      let instructor = "N/A", time = "N/A", max = "N/A";
+      if (info) {
+        const parts = info.split(',').map(p => p.trim());
+        parts.forEach(p => {
+          if (p.toLowerCase().startsWith('instructor:')) instructor = p.split(':')[1].trim();
+          if (p.toLowerCase().startsWith('time:')) time = p.split(':')[1].trim();
+          if (p.toLowerCase().startsWith('max')) max = p.split(':')[1].trim();
+        });
+      }
+
+      // Create training card
+      const block = document.createElement("div");
+      block.className = "notice-item";
+      block.innerHTML = `
+        <strong>📘 ${title}</strong><br>
+        👨‍🏫 <strong>Instructor:</strong> ${instructor}<br>
+        🕒 <strong>Time:</strong> ${time}<br>
+        👥 <strong>Maximum Students:</strong> ${max}
+      `;
+      container.appendChild(block);
+    });
+
+  } catch (err) {
+    console.error("Error loading training posts:", err);
+    container.innerHTML = "⚠️ Failed to load training posts.";
+  }
+}
+
+document.addEventListener("DOMContentLoaded", () => {
+  loadTrainingPosts2();
+});
+</script>
+
+<script>
+async function loadTrainingPosts() {
+const SHEET_ID3 = "1tvBwOzrrljerW-lp1Suv9uPCutAuax67q3Ed-GWalnY";
+const SHEET_NAME3 = "Notices"; // Change if your tab name is different
+const API_KEY3 = "AIzaSyCTscbYmfCZ_KINIp_Z6QmHQ7J3SUQOGhk"; // <-- Replace with your real API key
+  const RANGE3 = "D3:E";                                     // Title = D, Info = E
+
+  const url = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID3}/values/${SHEET_NAME3}!${RANGE3}?key=${API_KEY3}`;
+  const container = document.getElementById("TrainingArea");
+
+  try {
+    const res = await fetch(url);
+    const data = await res.json();
+    const rows = data.values;
+
+    if (!rows || rows.length === 0) {
+      container.innerHTML = "<p>No training sessions available.</p>";
+      return;
+    }
+
+    container.innerHTML = ""; // Clear container
+
+    rows.forEach(([title, info]) => {
+      // Parse info --> "Instructor: X, Time: Y, Max: Z"
+      let instructor = "N/A", time = "N/A", max = "N/A";
+      if (info) {
+        const parts = info.split(',').map(p => p.trim());
+        parts.forEach(p => {
+          if (p.toLowerCase().startsWith('instructor:')) instructor = p.split(':')[1].trim();
+          if (p.toLowerCase().startsWith('time:')) time = p.split(':')[1].trim();
+          if (p.toLowerCase().startsWith('max')) max = p.split(':')[1].trim();
+        });
+      }
+
+      // Create training card
+      const block = document.createElement("div");
+      block.className = "notice-item";
+      block.innerHTML = `
+        <strong>📘 ${title}</strong><br>
+        👨‍🏫 <strong>Instructor:</strong> ${instructor}<br>
+        🕒 <strong>Time:</strong> ${time}<br>
+        👥 <strong>Maximum Students:</strong> ${max}
+      `;
+      container.appendChild(block);
+    });
+
+  } catch (err) {
+    console.error("Error loading training posts:", err);
+    container.innerHTML = "⚠️ Failed to load training posts.";
+  }
+}
+
+document.addEventListener("DOMContentLoaded", () => {
+  loadTrainingPosts();
+});
+</script>
+
+
 
 </body>
 </html>
