--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <div class="card shadow">
       <div class="card-header bg-success text-white">
-        <h5 class="mb-0">🛩️ Current Trainings</h5>
+        <h5 class="mb-0">🛩️ Upcoming Trainings</h5>
       </div>
       <div class="card-body" id="TrainingArea">Loading trainings…</div>
     </div>
