--- a/index.html
+++ b/index.html
@@ -623,10 +623,11 @@ async function loadTrainingPosts2() {
 const SHEET_ID556 = "1tvBwOzrrljerW-lp1Suv9uPCutAuax67q3Ed-GWalnY";
 const SHEET_NAME556 = "Notices"; // Change if your tab name is different
 const API_KEY556 = "AIzaSyCTscbYmfCZ_KINIp_Z6QmHQ7J3SUQOGhk"; // <-- Replace with your real API key
-  const RANGE556 = "D3:E";                                     // Title = D, Info = E
+  const RANGE556 = "D3:E200";                                     // Title = D, Info = E
 
   const url = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID556}/values/${SHEET_NAME556}!${RANGE556}?key=${API_KEY556}`;
   const container = document.getElementById("TrainingArea2");
+
 
   try {
     const res = await fetch(url);
@@ -646,8 +647,8 @@ const API_KEY556 = "AIzaSyCTscbYmfCZ_KINIp_Z6QmHQ7J3SUQOGhk"; // <-- Replace wit
       if (info) {
         const parts = info.split(',').map(p => p.trim());
         parts.forEach(p => {
-          if (p.toLowerCase().startsWith('instructor:')) instructor = p.split('!')[1].trim();
-          if (p.toLowerCase().startsWith('time:')) time = p.split('!')[1].trim();
+          if (p.toLowerCase().startsWith('instructor')) instructor = p.split('!')[1].trim();
+          if (p.toLowerCase().startsWith('time')) time = p.split('!')[1].trim();
           if (p.toLowerCase().startsWith('max')) max = p.split('!')[1].trim();
         });
       }
