--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ ${emergencySection}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
 const SHEET_ID = "1tvBwOzrrljerW-lp1Suv9uPCutAuax67q3Ed-GWalnY";
-const SHEET_NAME = "Notices"; // Change if your tab name is different
+const SHEET_NAME = "Website"; // Change if your tab name is different
 const API_KEY = "AIzaSyCTscbYmfCZ_KINIp_Z6QmHQ7J3SUQOGhk"; // <-- Replace with your real API key
 
     // Navigation (Single Page)
@@ -621,7 +621,7 @@ const API_KEY = "AIzaSyCTscbYmfCZ_KINIp_Z6QmHQ7J3SUQOGhk"; // <-- Replace with y
 <script>
 async function loadTrainingPosts2() {
 const SHEET_ID556 = "1tvBwOzrrljerW-lp1Suv9uPCutAuax67q3Ed-GWalnY";
-const SHEET_NAME556 = "Notices"; // Change if your tab name is different
+const SHEET_NAME556 = "Website"; // Change if your tab name is different
 const API_KEY556 = "AIzaSyCTscbYmfCZ_KINIp_Z6QmHQ7J3SUQOGhk"; // <-- Replace with your real API key
   const RANGE556 = "D3:E200";                                     // Title = D, Info = E
 
@@ -679,7 +679,7 @@ document.addEventListener("DOMContentLoaded", () => {
 <script>
 async function loadTrainingPosts() {
 const SHEET_ID3 = "1tvBwOzrrljerW-lp1Suv9uPCutAuax67q3Ed-GWalnY";
-const SHEET_NAME3 = "Notices"; // Change if your tab name is different
+const SHEET_NAME3 = "Website"; // Change if your tab name is different
 const API_KEY3 = "AIzaSyCTscbYmfCZ_KINIp_Z6QmHQ7J3SUQOGhk"; // <-- Replace with your real API key
   const RANGE3 = "D3:E3";                                     // Title = D, Info = E
 
